--- a/index.html
+++ b/index.html
@@ -37,13 +37,34 @@
         </p>
     </main>
     <section>
+        <h2>Mas Vendido</h2>
         <article>
-
+            <h3>Red Dead II</h3>
+            <a href="#"><img src="/img/juego7.jpg" alt=""></a>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae non quis ratione dolorem sunt sed nulla nostrum impedit vel deleniti, eum fugit perspiciatis maiores expedita animi saepe ipsum reprehenderit dicta.</p>
         </article>
     </section>
     <footer>
-        <a href="#"><img src="/img/Zelda-Logo.png" alt="logo" class="logo"></a>
-
+        <div class="footer__logo">
+            <a href="#"><img src="/img/Zelda-Logo.png" alt="logo" class="logo"></a>
+        </div>
+        <div class="footer_redes">
+            <h3>Redes</h3>
+            <ul>
+                <li><a href="">Youtube</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
+            </ul>
+        </div>
+        <div class="footer__preguntas">
+            <h3>Preguntas?</h3>
+            <ul>
+                <li><a href="">Como me comunico?</a></li>
+                <li><a href="">Son Confiables?</a></li>
+                <li><a href="">Como hago un reclamo</a></li>
+            </ul>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1500487549015!2d-58.45337464862448!3d-34.60036706473314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb1a733cb37d%3A0x7e712bd23c7ce4ba!2sCOMPRA%20GAMER!5e0!3m2!1ses!2sar!4v1655176436920!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
 </html>
